# SIGNALS

./: .gitignore  Readme.md  consumer.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: master.yml
app/: callback.py
app/ADX/: callback.py
app/MACD/: callback.py
app/RSI/: callback.py  checker.py  conf.json  constants.py  intervals.py  rsi.py  schema.py  stoch_rsi.py  storage.py  utils.py
app/TREND/: callback.py
conf/: redis_conf.py  settings.py
